Address review feedback

--- a/site/developer/validmind-library.qmd
+++ b/site/developer/validmind-library.qmd
@@ -97,7 +97,7 @@ The {{< var validmind.developer >}} provides a rich collection of documentation 
 The {{< var validmind.developer >}} is designed to be model agnostic. If your model is built in Python, the {{< var vm.developer >}} provides all the standard functionality you may need without requiring you to rewrite any functions.
 
 ::: {.callout-important collapse="true" appearance="minimal"}
-## {{< fa building-columns >}} Key {{< var vm.product >}} concepts
+## Key {{< var vm.product >}} concepts
 
 <!--- These concepts were already introduced in the "Get started" section. They are repeated here in a collapsed format in case a reader missed them earlier. --->
 
