--- a/site/guide/model-inventory/_select-your-filters.qmd
+++ b/site/guide/model-inventory/_select-your-filters.qmd
@@ -1,6 +1,6 @@
 Filtering supports simple and complex conditions using AND or OR logic with nested groups. You can filter on both the default fields created by {{< var vm.product >}} and custom fields created by your organization.
 
-## Rules
+## [Rules]{.f4}
 
 Rules define individual conditions to filter by, such as the business unit or owner. 
 
@@ -37,7 +37,7 @@ Value editor
     - **Stakeholders or assignees**: Owner, Developer, or Validator, if applicable.
     - **Custom fields**: One of the organization-specific fields you added for your own use.
 
-3. From the operator dropdown, select one of:<br><small>_Available operators update based on the field selector._</small>
+3. From the operator dropdown, select one of:<br>[Available operators update based on the field selector]{.f7 .o-70}
 
 ::: {.pl4 .pr4 .pt2 .pb2}
 | Text fields      | Date fields          | Number fields          | Boolean fields        | Multi-select fields   |
@@ -51,7 +51,7 @@ Value editor
 | is not empty     | is not empty        | is not empty           |                      |                      |
 :::
 
-4. From the value editor, enter or select a value based on the field type:<br><small>_Value input changes based on field selector._</small>
+4. From the value editor, enter or select a value based on the field type:<br>[Value input changes based on field selector]{.f7 .o-70}
 
 :::: {.columns}
 
@@ -71,7 +71,6 @@ Number
 :::
 
 ::::
-
 
 :::: {.columns}
 
@@ -96,7 +95,7 @@ Entity fields
 
 6. Click **Apply Filters**.
 
-## Groups
+## [Groups]{.f4}
 
 Groups combine multiple rules that are evaluated together and can be nested one level deep. You use groups for more complex filters, such as _Condition A AND (Condition B OR Condition C)_.
 
@@ -112,7 +111,8 @@ To add a group:
 ![<small>Example: Use case is Attrition/Churn Management AND (Business Unit is Commerical Banking OR Business Unit is Retail Banking)</small>](/guide/model-inventory/select-your-filters-group.png){fig-alt="A rule AND a group of OR rules" .screenshot}
 :::
 
-## Combinators
+## [Combinators]{.f4}
+
 
 Combinators define how multiple rules or groups are logically combined when matching conditions. By default, multiple rules are combined with **AND** logic, meaning all conditions must match. 
 
@@ -137,18 +137,20 @@ To change the combinator:
 
 ::::
 
-::: {.pl4 .pr4}
-::: {.callout title="Why can't I AND and OR top-level combinators?"}
+
+::: {.mt2 .pt3 .pb3 .pl4 .pr4 .br3 .bg-black-10 .o-70}
+[Why can't I AND and OR top-level combinators?]{.f6 .b}
+
 Combinators must evaluate logically for the filter to be applied: 
 
-&ensp;{{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_ &emsp;— cannot be evaluated<br>
-&ensp;{{< fa check >}} _Show items matching Condition A AND (Condition B OR Condition C)_ — can be evaluated
+&ensp;{{< fa xmark >}} _Show items matching Condition A AND Condition B OR Condition C_<br>
+&ensp;{{< fa check >}} _Show items matching Condition A AND (Condition B OR Condition C)_
 
 {{< fa lightbulb >}} **To achive more complex filters, use groups.**
 :::
-:::
 
-## Examples
+
+## [Examples]{.f4}
 
 ::: {.panel-tabset}
 
@@ -238,7 +240,7 @@ Show _models owned by a specific user that have .pdf attachments_:
 
 :::
 
-### View active filters
+## [View active filters]{.f4}
 
 After applying filters, active filter conditions appear as individual chips next to the label **{{< fa filter >}} Filtered by:**. 
 
@@ -246,6 +248,6 @@ After applying filters, active filter conditions appear as individual chips next
 - Operators
 - Values
 
-### Remove active filters
+## [Remove active filters]{.f4}
 
 Click the {{< fa xmark >}} icon on any filter chip to remove that specific filter condition. The remaining filters are automatically reapplied.
