--- a/site/guide/model-inventory/working-with-model-inventory.qmd
+++ b/site/guide/model-inventory/working-with-model-inventory.qmd
@@ -40,8 +40,10 @@ Get started with the {{< var vm.product >}} inventory, which tracks comprehensiv
    - **{{< fa arrow-up-wide-short >}} Sort** — Reorder the list using different criteria in ascending or descending order.[^2]
 
 ::: {.callout-button .pl4 .nt4}
-::: {.callout collapse="true" title="How do I create effective filters?"}
-{{< include /guide/model-inventory/_select-your-filters.qmd >}} 
+::: {.callout-important collapse="true" appearance="minimal"}
+### How do I create effective filters?
+
+{{< include /guide/model-inventory/_select-your-filters.qmd >}}
 :::
 :::
 
