--- a/site/guide/model-validation/view-filter-artifacts.qmd
+++ b/site/guide/model-validation/view-filter-artifacts.qmd
@@ -95,7 +95,9 @@ To narrow down artifacts, you can apply some filters:
 
 <!-- NR This callout requires less negative top margin than the other one ... why?! -->
 ::: {.callout-button .pl4 .nt3}
-::: {.callout collapse="true" title="How do I create effective filters?" .callout-button}
+::: {.callout-important collapse="true" appearance="minimal"}
+### How do I create effective filters?
+
 {{< include /guide/model-inventory/_select-your-filters.qmd >}}
 :::
 :::
@@ -119,7 +121,9 @@ Changes are automatically saved to your account and do not affect other users.
 4. On the Select Your Filters dialog that opens, enter your filtering criteria.
 
 ::: {.callout-button .pl4 .nt4}
-::: {.callout collapse="true" title="How do I create effective filters?" .callout-button}
+::: {.callout-important collapse="true" appearance="minimal"}
+### How do I create effective filters?
+
 {{< include /guide/model-inventory/_select-your-filters.qmd >}}
 :::
 :::
