docs: Show model stakeholder updates in model activity (#1078)
* Edit: View model activity

* Edit

--- a/site/guide/model-inventory/view-model-activity.qmd
+++ b/site/guide/model-inventory/view-model-activity.qmd
@@ -12,10 +12,6 @@ Use the audit trail functionality in the {{< var validmind.platform >}} to track
 
 ## Prerequisites
 
-<!-- ::: {.callout}
-This topic matters for model developers, model validators, and auditors.
-::: -->
-
 - [x] {{< var link.login >}}
 - [x] There are models registered in the model inventory.[^1]
 
@@ -56,10 +52,11 @@ Shows model level updates:
 - Inventory fields updated on the model[^4]
 - Updates to model documentation, validation reports,[^5] or ongoing monitoring plans[^6]
 - Artifacts added, updated, or removed[^7]
+- Model stakeholders added or removed from your model[^8]
 
 #### Test Results
 
-Shows test results logged for your model via the {{< var validmind.developer >}}.[^8]
+Shows test results logged for your model via the {{< var validmind.developer >}}.[^9]
 
 :::
 
@@ -80,6 +77,8 @@ Shows test results logged for your model via the {{< var validmind.developer >}}
 
 [^7]: [Working with artifacts](/guide/model-validation/working-with-artifacts.qmd)
 
-[^8]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
+[^8]: [Manage model stakeholder types](/guide/configuration/manage-model-stakeholder-types.qmd#manage-stakeholder-types-on-models)
+
+[^9]: [Work with test results](/guide/model-documentation/work-with-test-results.qmd)
 
 
