--- a/site/guide/configuration/_monitor-invitations.qmd
+++ b/site/guide/configuration/_monitor-invitations.qmd
@@ -1,3 +1,5 @@
+
+:::: {.content-visible unless-format="revealjs"}
 Pending Invites
 : Monitor the status of invitations in the Pending Invites section. Under the [actions]{.smallcaps} column, click **{{< fa ellipsis-vertical >}}** to:
 
@@ -6,4 +8,22 @@ Pending Invites
 
 Invite History
 : Review the history of previously accepted invitations in the Invite History section.
+
+::::
+
+
+
+:::: {.content-hidden unless-format="revealjs"}
+#### Pending Invites
+
+Monitor the status of invitations in the Pending Invites section. Under the [actions]{.smallcaps} column, click **{{< fa ellipsis-vertical >}}** to:
+
+- **{{< fa copy >}} Copy Invite Link** — Copy the invitation link for this user to your clipboard.
+- [**{{< fa trash-can >}} Cancel Invitation**]{.red} — Revoke the pending invitation for this user.
+
+#### Invite History
+
+Review the history of previously accepted invitations in the Invite History section.
+
+::::
 
