Edit: Export documents

--- a/site/guide/reporting/export-documents.qmd
+++ b/site/guide/reporting/export-documents.qmd
@@ -6,7 +6,7 @@ aliases:
   - /guide/model-documentation/export-documentation.html
 ---
 
-Export model documentation, validation reports, and ongoing monitoring reports as Microsoft Word files (`.docx`).
+Export model documentation, validation reports, and ongoing monitoring reports as XML-based Microsoft Word (`.docx`) or Adobe Portable Document Format `.pdf` files.
 
 ::: {.callout}
 {{< var vm.product >}} supports Word 365, Word 2019, Word 2016, and Word 2013.
@@ -36,7 +36,8 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 5. In right sidebar, click **{{< fa download >}} Export Document**.
 
-    Configure whether or not comments[^7] left on your document should be exported in your document.
+    - Check off whether or not comments[^7] left on your document should be exported in your document
+    - Choose your file format — DOCX, PDF
 
 6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
@@ -59,7 +60,12 @@ Export model documentation, validation reports, and ongoing monitoring reports a
    - Include validation guideline adherence details
    - Include comments left on document[^13]
 
-7. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
+7. Choose your file format:
+
+  - **DOCX** — Microsoft Word (`.docx`)
+  - **PDF** — Adobe PDF (`.pdf`)
+
+8. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
 ## Export ongoing monitoring reports
 
@@ -73,7 +79,8 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
-    Configure whether or not comments[^17] left on your document should be exported in your document.
+    - Check off whether or not comments[^17] left on your document should be exported in your document
+    - Choose your file format — DOCX, PDF
 
 5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
