--- a/site/guide/reporting/export-documents.qmd
+++ b/site/guide/reporting/export-documents.qmd
@@ -8,8 +8,8 @@ aliases:
 
 Export model documentation, validation reports, and ongoing monitoring reports as XML-based Microsoft Word (`.docx`) or Adobe Portable Document Format `.pdf` files.
 
-::: {.callout}
-{{< var vm.product >}} supports Word 365, Word 2019, Word 2016, and Word 2013.
+::: {.callout title="Microsoft Word compatibility"}
+Documents exported from {{< var vm.product >}} are compatible with Word 365, Word 2019, Word 2016, and Word 2013.
 :::
 
 
@@ -37,33 +37,33 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 5. In right sidebar, click **{{< fa download >}} Export Document**.
 
     - Check off whether or not comments[^7] left on your document should be exported in your document
-    - Choose your file format — DOCX, PDF
+    - Choose your file format — DOCX,[^8] PDF[^9]
 
 6. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
-## Export validation report
+## Export validation reports
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^8]
+2. Select a model or find your model by applying a filter or searching for it.[^10]
 
-3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.[^9]
+3. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** or **Saved Versions** tab.[^11]
 
-4. Click on a Validation Report type file.[^10]
+4. Click on a Validation Report type file.[^12]
 
 5. In right sidebar, click **{{< fa download >}} Export Document**.
 
 6. Configure what is exported in your document by checking off the relevant boxes:
 
-   - Include compliance summary[^11]
-   - Include validation guidelines information[^12]
+   - Include compliance summary[^13]
+   - Include validation guidelines information[^14]
    - Include validation guideline adherence details
-   - Include comments left on document[^13]
+   - Include comments left on document[^15]
 
 7. Choose your file format:
 
-  - **DOCX** — Microsoft Word (`.docx`)
-  - **PDF** — Adobe PDF (`.pdf`)
+    - **DOCX** — To update the table of contents, click **Yes** when Word prompts you to update fields.
+    - **PDF** — Your document will be exported as a PDF with formatting preserved. The table of contents and links are generated automatically.
 
 8. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
@@ -71,16 +71,16 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 1. In the left sidebar, click **{{< fa cubes >}} Inventory**.
 
-2. Select a model or find your model by applying a filter or searching for it.[^14]
+2. Select a model or find your model by applying a filter or searching for it.[^16]
 
-1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^15]
+1. In the left sidebar that appears for your model, click **{{< fa file >}} Documents** and select the **Latest** tab.[^17]
 
-1. Click on an Ongoing Monitoring type file.[^16]
+1. Click on an Ongoing Monitoring type file.[^18]
 
 4. In right sidebar, click **{{< fa download >}} Export Document**.
 
-    - Check off whether or not comments[^17] left on your document should be exported in your document
-    - Choose your file format — DOCX, PDF
+    - Check off whether or not comments[^19] left on your document should be exported in your document
+    - Choose your file format — DOCX,[^20] PDF[^21]
 
 5. Click **{{< fa file-arrow-down >}} Download File** to download the file locally on your machine.
 
@@ -102,22 +102,31 @@ Export model documentation, validation reports, and ongoing monitoring reports a
 
 [^7]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
-[^8]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^8]: To update the table of contents, click **Yes** when Word prompts you to update fields.
 
-[^9]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+[^9]: Your document will be exported as a PDF with formatting preserved. The table of contents and links are generated automatically.
 
-[^10]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
+[^10]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^11]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
+[^11]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
 
-[^12]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
+[^12]: [Preparing validation reports](/guide/model-validation/preparing-validation-reports.qmd)
 
-[^13]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^13]: [Assess compliance](/guide/model-validation/assess-compliance.qmd)
 
-[^14]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
+[^14]: [Manage validation guidelines](/guide/model-validation/manage-validation-guidelines.qmd)
 
-[^15]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+[^15]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
 
-[^16]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+[^16]: [Working with the model inventory](/guide/model-inventory/working-with-model-inventory.qmd#search-filter-and-sort-models)
 
-[^17]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+[^17]: [Work with document versions](/guide/model-documentation/work-with-document-versions.qmd)
+
+[^18]: [Ongoing monitoring](/guide/monitoring/ongoing-monitoring.qmd)
+
+[^19]: [Collaborate with others](/guide/model-documentation/collaborate-with-others.qmd#commenting)
+
+[^20]: To update the table of contents, click **Yes** when Word prompts you to update fields.
+
+[^21]: Your document will be exported as a PDF with formatting preserved. The table of contents and links are generated automatically.
+
