Initial content generation experiment

--- a/site/about/glossary/_ai.qmd
+++ b/site/about/glossary/_ai.qmd
@@ -1,5 +1,14 @@
 Refer to [IBM's series on artificial intelligence](https://www.ibm.com/think/artificial-intelligence) for more in-depth resources.
 
+AI governance
+: The organizational framework for directing and overseeing how AI is designed, deployed, and used. It sets policy, accountability, and decision rights, covering ethics, compliance, risk appetite, lifecycle controls, and ongoing oversight across people, process, and technology.
+
+AI system
+: A combination of software, algorithms, and data designed to perform tasks that typically require human intelligence. In AI governance, an AI system is the primary unit of management, distinct from individual models.
+
+AI use case
+: A specific application or deployment of AI technology to solve a business problem or achieve an objective. Use cases are often the unit of oversight in AI governance frameworks.
+
 artificial intelligence (AI)
 : Artificial intelligence is a broad term used to classify machines that mimic human intelligence and human cognitive functions like problem-solving and learning. 
 
@@ -9,20 +18,23 @@ deep-learning
 generative AI (GenAI)
 : Generative AI refers to deep-learning models that can generate high-quality text, images, and other content based on the data they were trained on.
 
+human oversight
+: Controls and processes ensuring human involvement in AI-driven decisions. Required by regulations like the EU AI Act for high-risk AI systems to enable human intervention and override capabilities.
+
+impact assessment
+: An evaluation of the potential risks, harms, and consequences associated with deploying an AI system. Impact assessments are a core artifact in AI governance programs.
+
 large language model (LLM)
 : Advanced types of artificial intelligence models designed to understand, generate, and interact with human language at a sophisticated level, such as ChatGPT.^[[ChatGPT](https://chat.openai.com)]
 
 machine learning
 : Machine learning is a subset of artificial intelligence that allows for optimization. It helps make predictions that minimize the errors that arise from merely guessing. 
 
+risk tier
+: A classification level assigned to an AI system based on its potential impact and risk. The EU AI Act defines tiers including prohibited, high-risk, limited-risk, and minimal-risk categories.
+
 traditional statistical models
-: Mathematical frameworks used to analyze and make inferences from data. These models are foundational in statistics and serve to explain relationships, predict outcomes, and guide decision-making across various fields, such as economics, biology, engineering, and social sciences. 
+: Mathematical frameworks used to analyze and make inferences from data. These models are foundational in statistics and serve to explain relationships, predict outcomes, and guide decision-making across various fields, such as economics, biology, engineering, and social sciences.
 
-
-
-
-
-
-
-
-
+use case owner
+: The individual accountable for an AI use case within an organization. Responsible for decisions about AI deployment, compliance, and ongoing oversight.
