--- a/site/training/program/learning-paths.qmd
+++ b/site/training/program/learning-paths.qmd
@@ -14,6 +14,64 @@ If you have a specific topic in mind, [let us know](/training/training.qmd#conne
 
 Develop role-based expertise for your entire organization.
 
+### AI Governance Fundamentals
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-80-ns}
+Learn how to use {{< var vm.product >}} for **AI governance** to establish organizational oversight for AI systems, manage use cases through their lifecycle, and ensure compliance with regulations like the EU AI Act.
+
+:::
+
+::: {.w-20-ns .tc}
+[register now](/training/ai-governance/ai-governance-register.qmd){.button-green .cta target="_blank"}
+
+:::
+
+::::
+
+::: {.attn}
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Module 1</sup><br> Understanding AI Governance
+
+- Learn AI governance concepts and terminology
+- Understand AI governance vs MRM
+- Explore {{< var vm.product >}} platform orientation
+:::
+
+::: {.w-50-ns}
+#### <sup>Module 2</sup><br> Managing AI Use Cases
+
+- Work with use case inventories
+- Conduct impact assessments
+- Manage risk classification and lifecycle stages
+:::
+
+::::
+
+:::: {.flex .flex-wrap .justify-around}
+
+::: {.w-50-ns}
+#### <sup>Module 3</sup><br> Configuring AI Workflows
+
+- Set up intake and approval workflows
+- Configure human oversight controls
+- Manage attestations and escalation paths
+:::
+
+::: {.w-50-ns}
+#### <sup>Module 4</sup><br> Compliance and Oversight
+
+- Map regulatory requirements
+- Configure dashboards and reporting
+- Generate audit evidence
+:::
+
+::::
+::: 
+
 ### Developer Fundamentals
 
 :::: {.flex .flex-wrap .justify-around}
