--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -26,6 +26,8 @@ listing:
     image-height: 225px
     sort: false
     contents:
+    - path: ai-governance/ai-governance-register.qmd
+      image: ai-governance/ai-governance.png
     - path: administrator-fundamentals/administrator-fundamentals-register.qmd
       image: administrator-fundamentals/administrator-fundamentals.png
     - path: developer-fundamentals/developer-fundamentals-register.qmd
