--- a/site/about/overview.qmd
+++ b/site/about/overview.qmd
@@ -2,6 +2,19 @@
 title: "About {{< var vm.product >}}"
 date: last-modified
 listing:
+  - id: use-cases
+    type: grid
+    max-description-length: 250
+    grid-columns: 2
+    sort: false
+    fields: [title, description]
+    contents:
+    - use-cases/ai-governance.qmd
+    - use-cases/model-risk-management.qmd
+    - use-cases/eu-ai-act.qmd
+    - use-cases/sr-11-7.qmd
+    - use-cases/ss1-23.qmd
+    - use-cases/e-23.qmd
   - id: validmind-features
     type: grid
     max-description-length: 500
@@ -10,7 +23,7 @@ listing:
     fields: [title, description]
     contents:
     - overview-model-documentation.qmd
-    - overview-model-risk-management.qmd
+    - overview-llm-features.qmd
 aliases:
   - /guide/overview.html
 ---
@@ -18,11 +31,9 @@ aliases:
 :::: {.flex .flex-wrap .justify-around}
 
 ::: {.w-60-ns}
-{{< var vm.product >}} is a suite of tools helping developers, data scientists and risk and compliance stakeholders identify potential risks in their AI and large language models, and generate robust, high-quality model documentation that meets regulatory requirements. 
+{{< var vm.product >}} is a suite of tools helping developers, data scientists, and risk and compliance stakeholders identify potential risks in their AI systems and models, and generate robust, high-quality documentation that meets regulatory requirements. 
 
-Adept at handling many use cases, including models compatible with the Hugging Face Transformers API, and GPT 3.5, GPT 4, and hosted LLama2 and Falcon-based models (focused on text classification and text summarization use cases), {{< var vm.product >}} is purpose-built for model risk management teams.
-
-In addition to LLMs, {{< var vm.product >}} can also handle testing and documentation generation for a wide variety of models, including:
+{{< var vm.product >}} handles testing and documentation generation for a wide variety of AI systems and models, including:
 
 :::
 
@@ -44,28 +55,30 @@ In addition to LLMs, {{< var vm.product >}} can also handle testing and document
 
 - Traditional machine learning models (ML), such as tree-based models and neural networks
 - Natural language processing models (NLP)
+- Large language models (LLMs), including models compatible with the Hugging Face Transformers API, GPT 3.5, GPT 4, and hosted LLama2 and Falcon-based models
 - Traditional statistical models, such as OLS regression, logistic regression, time series, etc.
 - And many more model types
 
 What sets {{< var vm.product >}} apart is its focus on simplifying complex tasks for both model developers and validators. By automating critical and often tedious aspects of the model lifecycle, such as documentation, validation, and testing, we enable model developers to concentrate on building better models. 
 
-We do all of this while making it easy to align with regulatory guidelines on model risk management in the United States, the United Kingdom, and Canada. These regulations include the Federal Reserve's SR 11-7, the UK's SS1/23 and CP6/22), and Canada's Guideline E-23.
+## Use cases and regulatory frameworks
 
-{{< var vm.product >}} is designed to streamline the management of risk for AI models, including those used in machine learning (ML), natural language processing (NLP), and large language models (LLMs). 
+{{< var vm.product >}} supports multiple governance use cases and helps you comply with regulatory frameworks around the world:
 
-{{< var vm.product >}} offers tools that cater to both model developers and validators, simplifying key aspects of model risk management.
+:::{#use-cases}
+:::
+
+---
 
 ## What do I use {{< var vm.product >}} for?
 
-Model developers and validators play important roles in managing model risk, including risk that stems from generative AI and machine learning models. From complying with regulations to ensuring that institutional standards are followed, your team members are tasked with the careful documentation, testing, and independent validation of models.
-
-The purpose of these efforts is to ensure that good risk management principles are followed throughout the model lifecycle. To assist you with these processes of documenting and validating models, {{< var vm.product >}} provides a number of tools that you can employ regardless of the technology used to build your models.
+{{< var vm.product >}} provides tools to assist you with documenting and validating AI systems and models, regardless of the technology used to build them.
 
 <!-- Using the variable in alt text messes up the image display  -->
 
 ![The two main components of {{< var vm.product >}}. The {{< var validmind.developer >}} that integrates with your existing developer environment, and the {{< var validmind.platform >}}.](validmind-lifecycle.jpg){width=70% fig-alt="An image showing the two main components of ValidMind. The ValidMind Library that integrates with your existing developer environment, and the ValidMind Platform."}
 
-The {{< var validmind.product >}} provides two main product components: 
+{{< var validmind.product >}} provides two main product components: 
 
 ::: {.panel-tabset}
 
@@ -83,7 +96,7 @@ The *{{< var validmind.developer >}}* is a Python library of tools and methods d
 
 The *{{< var validmind.platform >}}* is an easy-to-use web-based interface that enables you to track the model lifecycle:
 
-- Customize workflows to adhere to and oversee your model risk management process.
+- Customize workflows to adhere to and oversee your governance processes.
 - Review and edit the documentation and test metrics generated by the {{< var vm.developer >}}.
 - Collaborate with and capture feedback from model developers and model validators.
 - Generate validation reports and approvals.
@@ -96,7 +109,7 @@ The *{{< var validmind.platform >}}* is an easy-to-use web-based interface that 
 {{< include /about/glossary/key_concepts/_key-concepts.qmd >}}
 :::
 
-### {{< var validmind.product >}}
+### {{< var validmind.product >}} features
 
 :::{#validmind-features}
 :::
@@ -105,32 +118,32 @@ The *{{< var validmind.platform >}}* is an easy-to-use web-based interface that 
 
 ## How do I get started?
 
-On the {{< var validmind.platform >}}, everything starts with the model inventory — you first register a new model and then manage the model lifecycle through the different activities that are part of your existing model risk management processes.
+On the {{< var validmind.platform >}}, everything starts with the inventory — you first register a new model or AI system and then manage the lifecycle through the different activities that are part of your existing governance processes.
 
 ### Approval workflow
 
-A typical high-level model approval workflow looks like this:
+A typical high-level approval workflow looks like this:
 
 ```{mermaid}
 graph LR
-    A[Model<br>registration] --> B[Initial<br>validation]
+    A[Registration] --> B[Initial<br>validation]
     B --> C[Validation<br>approval]
     C --> D[In production]
     D --> E[Periodic review<br>and revalidation]
     E --> B
 ```
 
-New model registration[^1]
-: Select a documentation template when registering a new inventory model to start your model documentation. You then use the model inventory to manage the metadata associated with the model, including all compliance and regulatory attributes. 
+Registration[^1]
+: Select a documentation template when registering a new inventory model to start your documentation. You then use the inventory to manage the metadata associated with the model or AI system, including all compliance and regulatory attributes. 
 
 Initial validation
 : Triggers a new workflow[^2] to yield a model that will be ready for production deployment after its documentation and validation reports have been approved. 
 
 Validation approval
-: Perform validation of the model to ensure that it meets the needs for which it was designed. You can also connect to third-party systems to send events when a model has been approved for production.
+: Perform validation to ensure that the model or AI system meets the needs for which it was designed. You can also connect to third-party systems to send events when a model has been approved for production.
 
 In production
-: Use the model in production while ensuring its ongoing reliability, accuracy, and compliance with regulations by monitoring the model's performance.
+: Use the model or AI system in production while ensuring its ongoing reliability, accuracy, and compliance with regulations by monitoring performance.
 
 Periodic review and revalidation
 : As part of regular performance monitoring or change management, you follow a process similar to that seen in the **Initial validation** step.
