--- a/site/index.qmd
+++ b/site/index.qmd
@@ -447,10 +447,10 @@ Setup + Administration
 ![](/assets/home-page/model_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
 
 ::: {.f3 .b .nt3 .nb3}
-Model Development
+Development
 :::
 
-[Save time by automating documentation and testing for your models using our {{< var vm.developer >}}.]{.mid-gray .f4}
+[Save time by automating documentation and testing for your LLMs and other models using our {{< var vm.developer >}}.]{.mid-gray .f4}
 
 [**Developer Quickstart**](/get-started/developer/quickstart-developer.qmd){.button .button-green}
 :::
@@ -459,7 +459,7 @@ Model Development
 ![](/assets/home-page/model_valid_icon.svg){.mb3 width="48" fig-alt="Decorative graphic without functional meaning"}
 
 ::: {.f3 .b .nt3 .nb3}
-Model Validation
+Validation
 :::
 
 [Quickly assess compliance by linking evidence from developers in your validation reports.]{.mid-gray .f4}
