--- a/site/training/ai-governance/compliance-and-oversight.qmd
+++ b/site/training/ai-governance/compliance-and-oversight.qmd
@@ -9,7 +9,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss]
+    theme: [default, ../assets/slides.scss, ./slides.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -22,8 +22,8 @@ format:
     output-file: _compliance-and-oversight.html
     search: false
 title-slide-attributes:
-  data-background-color: "#083E44"
-  data-background-image: "../assets/home-hero.svg"
+  data-background-image: "../assets/digitalspace-colours.svg"
+  data-background-opacity: "0.8"
 skip_preview: true
 ---
 
@@ -50,7 +50,7 @@ This fourth module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Regulatory mapping {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Regulatory mapping {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Understanding requirements {.center}
 
@@ -81,7 +81,7 @@ Each regulation maps to platform capabilities:
 - [SS1/23](/about/use-cases/ss1-23.qmd){target="_blank"}
 - [E-23](/about/use-cases/e-23.qmd){target="_blank"}
 
-# Dashboards and reporting {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Dashboards and reporting {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Governance dashboards {.center}
 
@@ -110,7 +110,7 @@ Generate reports for:
 - Internal audit
 - Compliance monitoring
 
-# Audit evidence {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Audit evidence {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Types of audit evidence {.center}
 
@@ -141,7 +141,7 @@ Best practices:
 - Document decisions and rationale
 - Perform periodic self-assessments
 
-# Ongoing compliance {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Ongoing compliance {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Continuous monitoring {.center}
 
