--- a/site/training/ai-governance/managing-ai-use-cases.qmd
+++ b/site/training/ai-governance/managing-ai-use-cases.qmd
@@ -9,7 +9,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss]
+    theme: [default, ../assets/slides.scss, ./slides.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -22,8 +22,8 @@ format:
     output-file: _managing-ai-use-cases.html
     search: false
 title-slide-attributes:
-  data-background-color: "#083E44"
-  data-background-image: "../assets/home-hero.svg"
+  data-background-image: "../assets/digitalspace-colours.svg"
+  data-background-opacity: "0.8"
 skip_preview: true
 ---
 
@@ -50,7 +50,7 @@ This second module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Use case inventories {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Use case inventories {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## What is a use case inventory? {.center}
 
@@ -81,7 +81,7 @@ Configure custom inventory fields for AI governance:
 3. Review the columns and filters available
 4. Consider which fields would support your governance needs
 
-# Risk classification {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Risk classification {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Why classify risk? {.center}
 
@@ -113,7 +113,7 @@ In {{< var vm.product >}}, you can:
 3. Apply documentation templates by tier
 4. Generate reports filtered by risk level
 
-# Impact assessments {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Impact assessments {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Purpose of impact assessments {.center}
 
@@ -143,7 +143,7 @@ Use {{< var vm.product >}} to:
 - Route assessments through approval workflows
 - Maintain audit trail of governance decisions
 
-# Lifecycle stages {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Lifecycle stages {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## AI governance lifecycle {.center}
 
