--- a/site/training/ai-governance/understanding-ai-governance.qmd
+++ b/site/training/ai-governance/understanding-ai-governance.qmd
@@ -9,7 +9,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss]
+    theme: [default, ../assets/slides.scss, ./slides.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -22,8 +22,8 @@ format:
     output-file: _understanding-ai-governance.html
     search: false
 title-slide-attributes:
-  data-background-color: "#083E44"
-  data-background-image: "../assets/home-hero.svg"
+  data-background-image: "../assets/digitalspace-colours.svg"
+  data-background-opacity: "0.8"
 skip_preview: true
 ---
 
@@ -72,7 +72,7 @@ Already logged in and refreshed this module? Click [{{< fa chevron-right >}}]() 
 
 :::
 
-# What is AI governance? {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# What is AI governance? {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Defining AI governance {.center}
 
@@ -110,7 +110,7 @@ In AI governance, the primary unit of management is the **AI system** or **AI us
 
 ::::
 
-# AI governance vs MRM {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# AI governance vs MRM {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Parallel use cases {.center}
 
@@ -135,7 +135,7 @@ The overlap may produce shared artifacts:
 
 Organizations may coordinate these use cases or manage them separately.
 
-# Key terminology {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Key terminology {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## AI governance terms {.center}
 
@@ -186,7 +186,7 @@ Organizations may coordinate these use cases or manage them separately.
 
 ::::
 
-# Platform orientation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Platform orientation {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## {{< var vm.product >}} for AI governance {.center}
 
