--- a/site/training/training.qmd
+++ b/site/training/training.qmd
@@ -22,18 +22,19 @@ listing:
     - program/training-faq.qmd
   - id: training-courses
     type: grid
+    grid-columns: 3
     max-description-length: 250
     image-height: 225px
     sort: false
     contents:
-    - path: ai-governance/ai-governance-register.qmd
-      image: ai-governance/ai-governance.png
     - path: administrator-fundamentals/administrator-fundamentals-register.qmd
       image: administrator-fundamentals/administrator-fundamentals.png
     - path: developer-fundamentals/developer-fundamentals-register.qmd
       image: developer-fundamentals/developer-fundamentals.png
     - path: validator-fundamentals/validator-fundamentals-register.qmd
       image: validator-fundamentals/validator-fundamentals.png
+    - path: ai-governance/ai-governance-register.qmd
+      image: ai-governance/ai-governance.png
     fields: [image, title, description]
   - id: sample-notebooks
     type: default
