--- a/site/training/ai-governance/configuring-ai-workflows.qmd
+++ b/site/training/ai-governance/configuring-ai-workflows.qmd
@@ -9,7 +9,7 @@ format:
     help: true
     controls-back-arrows: visible
     transition: slide
-    theme: [default, ../assets/slides.scss]
+    theme: [default, ../assets/slides.scss, ./slides.scss]
     slide-number: true
     chalkboard: false
     preview-links: auto
@@ -22,8 +22,8 @@ format:
     output-file: _configuring-ai-workflows.html
     search: false
 title-slide-attributes:
-  data-background-color: "#083E44"
-  data-background-image: "../assets/home-hero.svg"
+  data-background-image: "../assets/digitalspace-colours.svg"
+  data-background-opacity: "0.8"
 skip_preview: true
 ---
 
@@ -50,7 +50,7 @@ This third module is part of a four-part series:
 
 {{< include /training/assets/_revealjs-navigation.qmd >}}
 
-# Intake workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Intake workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## What is an intake workflow? {.center}
 
@@ -78,7 +78,7 @@ In {{< var vm.product >}}:
 2. Explore the available workflow templates
 3. Identify which workflows would support intake for AI systems
 
-# Approval workflows {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Approval workflows {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Purpose of approval workflows {.center}
 
@@ -110,7 +110,7 @@ Consider these design principles:
 - Sequential and parallel approvals
 - Approval deadline tracking
 
-# Human oversight controls {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Human oversight controls {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Regulatory context {.center}
 
@@ -141,7 +141,7 @@ Set up periodic review workflows:
 3. Track review completion
 4. Escalate overdue reviews
 
-# Attestations and escalation {background-color="#083E44" background-image="/training/assets/home-hero.svg"}
+# Attestations and escalation {background-color="#083E44" background-image="/training/assets/digitalspace-colours.svg"}
 
 ## Attestations {.center}
 
